Fix jumpy select2 multiple inputs

--- a/scss/1_components/7_select2/_select2.scss
+++ b/scss/1_components/7_select2/_select2.scss
@@ -25,6 +25,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
   margin-top: 10px;
   height: auto;
   min-height: 3rem;
+  overflow: hidden;
 }
 
 .select2-search-choice-focus {
@@ -292,6 +293,7 @@ disabled look for disabled choices in the results dropdown
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
   -webkit-padding-start: 0px;
+  height: 100%;
 }
 
 .select2-locked {
@@ -310,6 +312,7 @@ disabled look for disabled choices in the results dropdown
     list-style: none;
 }
 .select2-container-multi .select2-choices .select2-search-field {
+    max-width: 50px;
     margin: 0;
     padding: 0;
     white-space: nowrap;
@@ -331,6 +334,7 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-choices .select2-search-choice {
     @extend .chip;
+    display: inline-block;
     position: relative;
     padding-right: 30px !important;
 }
